# VERITAS_NamoFans_KDSH_2026

./: .gitignore  README.md  results.csv
CodeBase/Track A (VERITAS)/final_csv/: ablation_results.csv  novel_1_test_results.csv
CodeBase/Track A (VERITAS)/tests/: conftest.py  test_layers.py
CodeBase/Track B (BDH Experiments)/: .gitignore  requirements.txt
CodeBase/Track B (BDH Experiments)/dataset/: test.csv  train.csv
CodeBase/Track B (BDH Experiments)/research/: README.md
CodeBase/Track B (BDH Experiments)/scripts/: bdh.py  data_generator.py  generate_submission.py  run_evaluation.py
CodeBase/Track B (BDH Experiments)/tests/: verify_sota.py
CodeBase/Track B (BDH Experiments)/training/: __init__.py  classifier_head.py  integrate_classifier.py
Track A (VERITAS)/: .env.example  README.md  pyproject.toml
Track A (VERITAS)/final_csv/: final_train_results.csv  gemini_naive_train_results.csv  kdsh_train_evaluation.csv  novel_1_train_results.csv  novel_2_test_results.csv  novel_2_train_results.csv  test_results.csv
Track A (VERITAS)/sample_outputs/: README.md  evidence_ledger_consistent.json  evidence_ledger_contradictory.json
Track A (VERITAS)/src/core/: __init__.py  config.py  main.py  models.py
Track A (VERITAS)/src/core/api/: __init__.py  server.py
Track A (VERITAS)/src/core/external_integrations/: __init__.py  factscore_adapter.py  hipporag_adapter.py  raptor_adapter.py
Track A (VERITAS)/src/core/layer1/: __init__.py  classifier.py  constraint_graph.py  factscore.py
Track A (VERITAS)/src/core/layer2/: __init__.py  hipporag_index.py  raptor_index.py  unified_retriever.py
Track A (VERITAS)/src/core/layer3/: __init__.py  historian.py  simulator.py
Track A (VERITAS)/src/core/layer4/: __init__.py  ledger.py
Track A (VERITAS)/src/core/layer5/: __init__.py  adjudicator.py
Track A (VERITAS)/src/core/workflow/: __init__.py  graph.py  state.py
Track A (VERITAS)/tests/: conftest.py  test_integration.py  test_layers.py
Track B (BDH Experiments)/: README.md
Track B (BDH Experiments)/research/bdh-transformers/: pyproject.toml  run_tests.sh
Track B (BDH Experiments)/research/bdh-transformers/src/bdh_transformers/: __init__.py
Track B (BDH Experiments)/research/bdh-transformers/src/bdh_transformers/models/bdh/: configuration_bdh.py  modeling_bdh.py
Track B (BDH Experiments)/research/bdh-transformers/tests/models/: test_modeling_bdh.py
Track B (BDH Experiments)/research/bdh_edufork/: README.md  bdh.py  requirements.txt
Track B (BDH Experiments)/research/dynamic_vocab_bdh/: README.md  bdh.py
Track B (BDH Experiments)/research/train_experiments/: notebooke00da64421.ipynb
Track B (BDH Experiments)/scripts/: calibrate_thresholds.py  evaluate_full_pipeline.py  kaggle_inference.py  verify_setup.py
Track B (BDH Experiments)/src/: __init__.py
Track B (BDH Experiments)/src/models/: __init__.py
Track B (BDH Experiments)/src/pathway_integration/: vector_store.py
Track B (BDH Experiments)/src/pipeline/: __init__.py  (+1 more)
Track B (BDH Experiments)/tests/: verify_bdh_unit.py  verify_real_dataset.py
Track B (BDH Experiments)/training/: generate_synthetic_constraints.py
(+48 files in other folders)
