[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bdh-transformers"
version = "0.1.0"
description = "A custom BDH-GPU model implementation for Hugging Face Transformers"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
  {name = "Jan Ploski", email = "jpl@plosquare.com"},
]
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Environment :: GPU",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "torch>=2.6.0",
    "transformers>=4.57.0"
]

[project.urls]
"Homepage" = "https://github.com/jploski/bdh-transformers"
"Bug Tracker" = "https://github.com/jploski/bdh-transformers/issues"

# Keep your existing src layout settings
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
